...
        
    }
    
    
    // MARK: - UI Setup
    private func setupUI() {
        self.navigationItem.title = "Weather App"
        self.view.backgroundColor = .systemBackground
        
        self.view.addSubview(tableView)
        self.tableView.translatesAutoresizingMaskIntoConstraints = false
        
        NSLayoutConstraint.activate([
...
            self.tableView.trailingAnchor.constraint(equalTo: self.view.trailingAnchor),
        ])
    }
    
    private func setupSearchController() {
        self.navigationItem.searchController = searchController
        self.searchController.searchBar.placeholder = "Search"
    
        searchController.delegate = self
        searchController.searchBar.delegate = self
    }
}

...
