...
    override func viewDidLoad() {
        super.viewDidLoad()
        self.setupUI()
        
        self.view.backgroundColor = .systemBackground
        self.navigationItem.title = self.viewModel.cityName
        self.navigationController?.navigationBar.topItem?.backBarButtonItem = UIBarButtonItem(title: "Back", style: .done, target: nil, action: nil)
        
        self.weatherDesc.text = self.viewModel.weatherDescription
        self.temperature.text = self.viewModel.temperature
        self.humidity.text = self.viewModel.humidity
        
        self.weatherLogo.downloaded(from: self.viewModel.weatherIcon)
...
